--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -1,23 +1,21 @@
-$border-color: rgba(0,0,0,.14);
-$font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-
 /***************
   HTML Styles
 ***************/
 body {
-  //background-color: #fcfcfc;
-  color: $off-black;
-  line-height: 1.6;
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
+  background-color: #fcfcfc;
 }
 
 p.box {
   padding: 20px;
 }
 p {
+  color: rgba(0, 0, 0, 0.71);
   padding: 0;
+  -webkit-font-smoothing: antialiased;
+}
 
+h1,h2,h3,h4,h5,h6 {
+  -webkit-font-smoothing: antialiased;
 }
 
 h5 > span {
@@ -30,15 +28,11 @@ nav {
   // background-color: color("materialize-red", "lighten-2");
 
   a {
-    color: rgba(0,0,0,.87);
+    -webkit-font-smoothing: antialiased;
   }
   ul li a:hover, ul li.active {
     background-color: color("materialize-red", "lighten-1");
   }
-}
-
-td, th {
-  padding: 15px 10px;
 }
 
 .header {
@@ -46,16 +40,16 @@ td, th {
   font-weight: 300;
 }
 
+.caption {
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin-bottom: 30px;
+}
+
 .preview {
   background-color: #FFF;
   border: 1px solid #eee;
   padding: 20px 20px;
-}
-
-.method-header {
-  font-family: 'Inconsolata', Monaco, Consolas, 'Andale Mono', monospace;
-  margin-top: 15px;
-  padding-top: 30px;
 }
 
 header, main, footer {
@@ -86,31 +80,24 @@ footer.example {
 ********************/
 
 // custom styled sidebar
-ul.sidenav.sidenav-fixed li.logo {
+ul.side-nav.fixed li.logo {
   text-align: center;
   margin-top: 32px;
-  margin-bottom: 136px;
+  margin-bottom: 80px;
 
   &:hover,
   #logo-container:hover {
     background-color: transparent;
   }
 }
-ul.sidenav.sidenav-fixed {
+ul.side-nav.fixed {
   overflow: hidden;
-  box-shadow: none;
-  border-right: 1px solid $border-color;
-
-  > li:last-child {
-      margin-bottom: 160px;
-    }
-
 
   li {
     line-height: 44px;
 
     &.active {
-      background-color: rgba(50,50,50,.06);
+      background-color: rgba(0,0,0,.05);
     }
 
     a {
@@ -118,10 +105,6 @@ ul.sidenav.sidenav-fixed {
       line-height: 44px;
       height: 44px;
       padding: 0 30px;
-
-      .new.badge {
-        margin-top: calc(22px - 11px);
-      }
     }
   }
 
@@ -153,84 +136,16 @@ ul.sidenav.sidenav-fixed {
   margin-bottom: 32px;
 }
 
-.current-version-number {
-  color: rgba(0,0,0,0.53);
-}
-
-.patreon-ad {
-  display: none;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  height: 45px;
-  width: 299px;
-  background-color: #fff;
-  z-index: 1000;
-  border-top: 1px solid $border-color;
-
-  a {
-    width: 100%;
-    line-height: 45px;
-    padding: 0 30px;
-  }
-}
-.patreon-footer-ad {
-  &.white-ad {
-    background-color: #444;
-    border-radius: 4px;
-    padding: 0 10px;
-  }
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  display: inline-block;
-  float: left;
-  margin-right: 50px;
-  margin-bottom: 20px;
-
-  a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 70px;
-  }
-  img {
-    max-width: 150px;
-    max-height: 100%;
-  }
-}
-
-@media #{$medium-and-down} {
-  .patreon-ad,
-  .bsa-cpc {
-    display: none;
-  }
-
-  .patreon-footer-ad {
-    display: block;
-    float: none;
-    margin-right: 0;
-  }
-
-  footer.page-footer .container {
-    text-align: center;
-  }
-}
-
 nav.top-nav {
   height: 122px;
   box-shadow: none;
-  border-bottom: 1px solid $border-color;
-  background-color: transparent;
 
-  h1.header {
-    margin: 0;
-    padding-top: 26px;
+  a.page-title {
+    line-height: 122px;
+    font-size: 48px;
   }
 }
-a.sidenav-trigger.top-nav {
+a.button-collapse.top-nav {
   position: absolute;
   text-align: center;
   height: 48px;
@@ -239,7 +154,7 @@ a.sidenav-trigger.top-nav {
   top: 0;
   float: none;
   margin-left: 1.5rem;
-  color: color("materialize-red", "lighten-3");
+  color: #fff;
   font-size: 36px;
   z-index: 2;
 
@@ -253,12 +168,8 @@ a.sidenav-trigger.top-nav {
 }
 
 @media #{$small-and-down} {
-  a.sidenav-trigger.top-nav {
+  a.button-collapse.top-nav {
     left: 5%;
-  }
-
-  ul.sidenav.sidenav-fixed {
-    border: 0;
   }
 }
 
@@ -272,13 +183,9 @@ a.sidenav-trigger.top-nav {
   }
 }
 
-@media #{$medium-and-up} {
-  main > .container,
-  body > .page-footer > .container,
-  .top-nav > .container,
-  #index-banner > .container,
-  .github-commit > .container {
-    width: 100%;
+@media #{$large-and-up} {
+  .container {
+    width: 85%;
   }
 }
 
@@ -290,7 +197,7 @@ a.sidenav-trigger.top-nav {
 }
 
 @media only screen and (max-width: 992px) {
-  #front-page-nav ul.sidenav {
+  #front-page-nav ul.side-nav {
     li {
       float: none;
       padding: 0 15px;
@@ -312,18 +219,15 @@ a.sidenav-trigger.top-nav {
 }
 
 #index-banner {
-  border-bottom: 1px solid $border-color;
-
+  background-color: color("materialize-red", "lighten-2");
   .container {
     position: relative;
   }
   .header {
-    // color: #FFF;
+    color: #FFF;
   }
   h4 {
     margin-bottom: 40px;
-    line-height: 44px;
-    color: rgba(0,0,0,.7);
   }
   h1 {
     margin-top: 16px;
@@ -349,16 +253,12 @@ a.sidenav-trigger.top-nav {
 
 // Latest commit widget
 .github-commit {
-  color: rgba(0,0,0,0.53);
-  border-top: 1px solid $border-color;
   padding: 14px 0;
   height: 64px;
   line-height: 36px;
+  background-color: #5c5757;
+  color: hsl(0, 0%, 90%);
   font-size: .9rem;
-
-  .sha {
-    margin: 0 6px 0 6px;
-  }
 }
 @media #{$medium-and-down} {
   .github-commit {
@@ -366,8 +266,21 @@ a.sidenav-trigger.top-nav {
   }
 }
 
+#github-button {
+  background-color: #6f6d6d;
+  transition: .25s ease;
+  &:hover {
+    background-color: #797777;
+  }
+}
+
+.sha {
+  color: hsl(0, 0%, 94%) ;
+ margin: 0 6px 0 6px;
+}
+
 #download-button {
-  background-color: color("materialize-red", "lighten-2");
+  background-color: color("materialize-red", "lighten-3");
   width: 260px;
   height: 70px;
   line-height: 70px;
@@ -556,11 +469,10 @@ $height: auto;
     height: 55px;
     width: 100%;
     padding: 0 15px;
+    line-height: 55px;
     font-weight: 500;
     font-size: 12px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    display: block;
     box-sizing: border-box;
   }
   .col {
@@ -617,12 +529,6 @@ $height: auto;
 }
 
 
-// Tables
-thead {
-  color: rgba(0, 0, 0, .6);
-}
-
-
 // Shadow demo styling
 .shadow-demo {
   background-color: color("teal", "lighten-1");
@@ -653,17 +559,7 @@ thead {
 ul.table-of-contents {
   margin-top: 0;
   padding-top: 48px;
-
-  a {
-    &.active {
-      color: rgba(0,0,0,.8);
-    }
-    color: rgba(0,0,0,.55);
-    font-weight: 400;
-  }
 }
-
-
 
 // Prism Styling
 code, pre {
@@ -679,8 +575,6 @@ code, pre {
   padding: .1em .25em;
   border: solid 1px rgba(51,51,51,0.12);
 }
-
-// Styles code blocks
 pre[class*="language-"] {
   &:before {
     position: absolute;
@@ -688,7 +582,7 @@ pre[class*="language-"] {
     background: hsl(30, 10%, 90%);
     top: 0;
     left: 0;
-    font-family: $font-stack;
+    font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #555;
     content:attr(class);
@@ -699,17 +593,6 @@ pre[class*="language-"] {
   }
   padding: 25px 12px 7px 12px;
   border: solid 1px rgba(51, 51, 51, 0.12);
-  background: rgba(246, 246, 246, .2);
-}
-
-pre[class*="language-"],
-code[class*="language-"] {
-  line-height: 1.3;
-}
-
-// Styles one-liners
-:not(pre) > code[class*="language-"] {
-  background: rgba(246, 246, 246, .3);
 }
 
 
@@ -778,8 +661,8 @@ code[class*="language-"] {
 .buysellads-header #carbonads {
   & > span,
   span.carbon-wrap { height: auto; }
-  // a.carbon-text { color: #fff; }
-  // a.carbon-poweredby { color: rgba(255,255,255,.8); }
+  a.carbon-text { color: #fff; }
+  a.carbon-poweredby { color: rgba(255,255,255,.8); }
 }
 
 
@@ -790,7 +673,7 @@ code[class*="language-"] {
   padding: 1em;
   max-width: 360px;
   border-radius: 2px;
-  border: 1px solid $border-color;
+  background-color: hsla(0, 0%, 100%, .13);
 
 
   span {
@@ -912,73 +795,6 @@ code[class*="language-"] {
 }
 
 
-/** BSA Sidebar */
-.bsa-cpc #_default_ {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 10000;
-  padding: 15px 30px 20px;
-  width: 299px;
-  border-top: solid 1px #dbdbdb;
-  background-color: #fff;
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-.bsa-cpc .default-ad {
-  display: none;
-}
-
-.bsa-cpc ._default_ {
-  display: inline;
-  overflow: hidden;
-  line-height: 1;
-}
-
-.bsa-cpc ._default_ > * {
-  vertical-align: middle;
-}
-
-.bsa-cpc a {
-  color: inherit;
-}
-
-.bsa-cpc a:hover {
-  color: #ee6e73;
-}
-
-.bsa-cpc .default-image {
-  display: none;
-}
-
-.bsa-cpc .default-title,
-.bsa-cpc .default-description {
-  display: inline;
-}
-
-.bsa-cpc .default-title {
-  position: relative;
-  margin-right: 8px;
-  font-weight: 600;
-}
-
-.bsa-cpc .default-title:before {
-  position: absolute;
-  top: calc(-50% - 17px);
-  padding: 4px 6px;
-  border-radius: 3px;
-  background-color: #ee6e73;
-  color: #fff;
-  content: "Sponsor";
-  text-transform: uppercase;
-  letter-spacing: .4px;
-  font-weight: 600;
-  font-size: 10px;
-  line-height: 1;
-}
-
-
 
 // Footer styling
 footer{
@@ -986,17 +802,6 @@ footer{
 }
 body.parallax-demo footer {
   margin-top: 0;
-}
-.docs-footer {
-  margin-top: 40px;
-  background-color: transparent;
-  border-top: 1px solid $border-color;
-  color: inherit;
-
-  .footer-copyright {
-    color: inherit;
-    background-color: transparent;
-  }
 }
 
 //About page styling
@@ -1118,45 +923,6 @@ body.parallax-demo footer {
   width: 300px !important;
 }
 
-// Version dropdown
-#nav-mobile li.version {
-  position: absolute;
-  top: 100px;
-  left: 0;
-  right: 0;
-  font-family: "Inconsolata";
-  text-align: center;
-
-  .dropdown-trigger {
-    font-family: "Inconsolata";
-    margin: 0 auto;
-    display: inline-block;
-    padding: 0 10px;
-    border-bottom: 1px solid rgba(0,0,0, .2);
-
-    .caret {
-      position: relative;
-      top: 10px;
-      fill: rgba(0,0,0,.6);
-    }
-  }
-}
-
-#version-dropdown {
-  text-align: left;
-
-  li > a {
-    padding: 0 10px;
-
-  }
-
-  a {
-    height: 50px;
-    line-height: 50px;
-  }
-
-}
-
 // Search
 #nav-mobile li.search {
   &:hover { background-color: #fff; }
@@ -1164,19 +930,15 @@ body.parallax-demo footer {
   position: absolute;
   left: 0;
   right: 0;
-  top: 160px;
+  top: 120px;
   margin-top: 1px;
   padding: 1px 0 0 0;
   z-index: 2;
 
   .search-wrapper {
-    &.focused .search-results:not(:empty) {
-      border-bottom: 1px solid $border-color;
-    }
+    &.focused { margin: 0; }
 
-    color: #777;
-    margin-top: -1px;
-    border-top: 1px solid $border-color;
+    margin: 0 12px;
     transition: margin .25s ease;
 
     input#search {
@@ -1185,21 +947,19 @@ body.parallax-demo footer {
         box-shadow: none;
       }
 
-      color: #777;
       display: block;
       font-size: 16px;
       font-weight: 300;
       width: 100%;
-      height: 62px;
+      height: 45px;
       margin: 0;
-      box-sizing: border-box;
-      padding: 0 45px 0 30px;
+      padding: 0 45px 0 15px;
       border: 0;
     }
 
     i.material-icons {
       position: absolute;
-      top: 21px;
+      top: 10px;
       right: 10px;
       cursor: pointer;
     }
@@ -1208,7 +968,7 @@ body.parallax-demo footer {
 
   .search-results {
     margin: 0;
-    border-top: 1px solid $border-color;
+    border-top: 1px solid #e9e9e9;
     background-color: #fff;
 
     a {
@@ -1229,10 +989,6 @@ body.parallax-demo footer {
 // Themes
 body.themes {
   .themes-section {
-    &.right-aligned {
-      flex-direction: row-reverse;
-    }
-
     padding: 60px 0 40px 0;
     @extend .valign-wrapper;
 
@@ -1243,13 +999,6 @@ body.themes {
     h4 {
       margin-top: 0;
     }
-
-    .badge.new {
-      font-weight: 400;
-      float: none;
-      display: inline-block;
-      transform: translateY(-6px);
-    }
   }
 }
 .shopify-buy-frame,
@@ -1257,7 +1006,7 @@ body.themes {
   float: left;
 }
 .shopify-buy-frame {
-  width: 107px;
+  width: 105px;
 }
 .shopify-btn {
   &:hover {
@@ -1286,21 +1035,5 @@ body.themes {
 
   a {
     color: #baef74;
-  }
-}
-
-@media #{$small-and-down} {
-  body.themes {
-    .themes-section {
-      &.right-aligned {
-        flex-direction: column-reverse;
-      }
-
-      flex-direction: column-reverse;
-
-      .theme-preview {
-        margin-bottom: 40px;
-      }
-    }
   }
 }
