--- a/sass/components/_chips.scss
+++ b/sass/components/_chips.scss
@@ -1,10 +1,4 @@
 .chip {
-  &:focus {
-    outline: none;
-    background-color: $chip-selected-color;
-    color: #fff;
-  }
-
   display: inline-block;
   height: 32px;
   font-size: 13px;
@@ -52,6 +46,11 @@
     cursor: text;
   }
 
+  .chip.selected {
+    background-color: $chip-selected-color;
+    color: #fff;
+  }
+
   .input {
     background: none;
     border: 0;
@@ -74,7 +73,6 @@
   // Autocomplete
   .autocomplete-content {
     margin-top: 0;
-    margin-bottom: 0;
   }
 }
 
