--- a/sass/components/_sidenav.scss
+++ b/sass/components/_sidenav.scss
@@ -1,6 +1,6 @@
-.sidenav {
+.side-nav {
   position: fixed;
-  width: $sidenav-width;
+  width: 300px;
   left: 0;
   top: 0;
   margin: 0;
@@ -92,7 +92,7 @@
     line-height: $sidenav-line-height;
   }
 
-  .user-view {
+  .userView {
     position: relative;
     padding: ($sidenav-padding * 2) ($sidenav-padding * 2) 0;
     margin-bottom: $sidenav-padding / 2;
@@ -143,11 +143,6 @@
 
 // Touch interaction
 .drag-target {
-  // Right Align
-  &.right-aligned {
-    right: 0;
-  }
-
   height: 100%;
   width: 10px;
   position: fixed;
@@ -156,23 +151,23 @@
 }
 
 
-// Fixed Sidenav shown
-.sidenav.sidenav-fixed {
+// Fixed side-nav shown
+.side-nav.fixed {
+  left: 0;
+  transform: translateX(0);
+  position: fixed;
+
   // Right Align
   &.right-aligned {
     right: 0;
     left: auto;
   }
-
-  left: 0;
-  transform: translateX(0);
-  position: fixed;
 }
 
-// Fixed Sidenav hide on smaller
+// Fixed sideNav hide on smaller
 @media #{$medium-and-down} {
-  .sidenav {
-    &.sidenav-fixed {
+  .side-nav {
+    &.fixed {
       transform: translateX(-105%);
 
       &.right-aligned {
@@ -180,37 +175,38 @@
       }
     }
 
-    > a {
+    a {
       padding: 0 $sidenav-padding;
     }
 
-    .user-view {
+    .userView {
       padding: $sidenav-padding $sidenav-padding 0;
     }
   }
 }
 
 
-.sidenav .collapsible-body > ul:not(.collapsible) > li.active,
-.sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active {
+.side-nav .collapsible-body > ul:not(.collapsible) > li.active,
+.side-nav.fixed .collapsible-body > ul:not(.collapsible) > li.active {
   background-color: $primary-color;
   a {
     color: $sidenav-bg-color;
   }
 }
-.sidenav .collapsible-body {
+.side-nav .collapsible-body {
   padding: 0;
 }
 
 
-.sidenav-overlay {
+#sidenav-overlay {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  opacity: 0;
+
   height: 120vh;
   background-color: rgba(0,0,0,.5);
   z-index: 997;
-  display: none;
+
+  will-change: opacity;
 }
